# product-analytics

./: .gitignore  pyproject.toml
auto-ml/: explanation-insights.md
blinkist_example/: blinkist_eda.ipynb  blinkist_task.md  blinkist_task_report.md
blinkist_example/.ipynb_checkpoints/: blinkist_eda-checkpoint.ipynb
blinkist_example/data/: books.csv  subscribers.csv
blinkist_example/md_refs/: ppt.pptx  ppt_drawing.pptx  ~$ppt_drawing.pptx
building-recommendations/: readme.md
cleo_example/: cleo_eda.ipynb  cleo_retention_report.md
cleo_example/data/: cleo_user_activity.csv  cleo_users.csv
dazn_example/: dazn_report.md
fbprophet/: hello_world.py  hello_world_nb.ipynb
fbprophet/.ipynb_checkpoints/: hello_world-checkpoint.py
fight-churn/: creating-customer-metrics.md  readme.md  understanding-the-data.md
fight-churn/customer-metrics/: event-metrics.py
fight-churn/data-generation/py/: behavior.py  churndb.py  churnsim.py  customer.py  utility.py
fight-churn/eda/: eda.ipynb  event_summary.sql  helpers.py  subscription_summary.sql
fight-churn/eda/.ipynb_checkpoints/: eda-checkpoint.ipynb
fight-churn/eda/queries/: activity.sql  basic_ga.sql  (+3 more)
lyst_example/: lyst_report.md
lyst_example/.ipynb_checkpoints/: lyst_eda-checkpoint.ipynb
lyst_example/data/: summary_data.csv
machine-learning/: boston.py  diabetes.py  digits.py  gapminder.py  iris.py  readme.md  ridge_regression.py  white_wine.py
recommendation-systems/: building.md  readme.md
recommendation-systems/personalisation_in_practice/: readme.md
supervised-learning/: readme.md
