[tool.poetry]
name = "product-analytics"
version = "0.1.0"
description = ""
authors = ["michael <michaelrogers.arsenal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
jupyter = "^1.0.0"
jupyterlab = "^2.2.8"
altair = "^4.1.0"
seaborn = "^0.11.0"
Plotly = "^4.12.0"
pendulum = "^2.1.2"
scikit-learn = "^0.23.2"
patsy = "^0.5.1"
graphviz = "^0.14.2"
pydotplus = "^2.0.2"
six = "^1.15.0"
altair_saver = "^0.5.0"
missingno = "^0.4.2"
sqlfluff = "^0.3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
